[gd_scene load_steps=2 format=3 uid="uid://b60wt1n2vlnts"]

[ext_resource type="Script" uid="uid://ckco2ddxaaakm" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.70000005)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -114.5
offset_right = 125.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.80813736, 3.272891e-06, 7.70092e-07, 1)
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Main Menu
"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Quit
"
